# v4l2-relayd

./: .gitlab-ci.yml  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac
data/etc/default/: v4l2-relayd  v4l2-relayd-uf  v4l2-relayd-wf
data/etc/modprobe.d/: v4l2-relayd.conf
data/systemd/: v4l2-relayd-uf.service  v4l2-relayd-wf.service  v4l2-relayd.service
src/: v4l2-relayd.c
